[tool]
[tool.poetry]
name = "redis_heartbeat_lock"
version = "0.1.6"
homepage = "https://github.com/fwallacevt/redis-heartbeat-lock"
description = "Top-level package for Simple Python Redis locking."
authors = ["Forrest Wallace <forrest.wallace.vt@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "redis_heartbeat_lock" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
redis = "*"
uuid = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
pytest-aiohttp = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-xdist = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
